# cookiecutter

./: Makefile  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.repo_name }}/: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  setup.py  {% if cookiecutter.create_dockerfile== 'y' %}Dockerfile{% endif %}
{{ cookiecutter.repo_name }}/.github/workflows/: ci.yml
